# Football-League

./: CMakeLists.txt  Coach.cpp  Coach.h  Date.h  Footballer.cpp  Footballer.h  Game.cpp  Game.h  Ligat_HaAl.cpp  Ligat_HaAl.h  Manager.cpp  Manager.h  Person.cpp  Person.h  README.md  Referee.cpp  Referee.h  Stadium.cpp  Stadium.h  Team.cpp  Team.h  Worker.cpp  Worker.h  main.cpp  חלק א שאלות תיאורטיות.docx
