cmake_minimum_required(VERSION 3.13)
project(Avoda_4)

set(CMAKE_CXX_STANDARD 14)

add_executable(Avoda_4 main.cpp Person.cpp Person.h Worker.cpp Worker.h Footballer.cpp Footballer.h Coach.cpp Coach.h Referee.cpp Referee.h Manager.cpp Manager.h Team.cpp Team.h Game.cpp Game.h Stadium.cpp Stadium.h Date.cpp Date.h Ligat_HaAl.cpp Ligat_HaAl.h)